--- a/catalog.html
+++ b/catalog.html
@@ -5,7 +5,7 @@
   <title>Седона - Гостиницы</title>
   <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.min.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body class="main-body">
 <div class="container">
