--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Седона - Главная</title>
   <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.min.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body class="main-body">
 <div class="container">
@@ -101,76 +101,71 @@
       <p>и мы покажем вам лучшие предложения гостиниц в седоне</p>
       <button type="button" class="button open-search-form-button">Поиск Гостиницы в Седоне</button>
     </section>
-    <div class="div-for-search-form">
-      <section class="search-form modal modal-show">
-        <h2 class="visually-hidden">Форма поиска гостиницы</h2>
-        <form method="get" action="#">
-          <p>
-            <label>
-              Дата заезда: <input type="text" placeholder="24 апреля 2017" class="long-input date-in-input">
-            </label>
-            <button type="button" class="button button-icon button-calendar" aria-label="календарь">
-              <svg width="21" height="23" viewBox="0 0 21 23" fill="black" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" clip-rule="evenodd"
-                      d="M16.406 3.02498H19.251C20.217 3.02498 21 3.84698 21 4.86198V21.164C21 22.179 20.217 23 19.251 23H1.75C0.784 23 0 22.179 0 21.164V4.86198C0 3.84698 0.784 3.02498 1.75 3.02498H4.593V1.64798C4.593 1.26698 4.887 0.958984 5.25 0.958984C5.612 0.958984 5.906 1.26698 5.906 1.64798V3.02498H9.844V1.64798C9.844 1.26698 10.138 0.958984 10.501 0.958984C10.862 0.958984 11.156 1.26698 11.156 1.64798V3.02498H15.094V1.64798C15.094 1.26698 15.387 0.958984 15.75 0.958984C16.112 0.958984 16.406 1.26698 16.406 1.64798V3.02498ZM19.5646 21.484C19.6466 21.3979 19.691 21.2828 19.688 21.164H19.689V4.86198C19.689 4.60898 19.493 4.40298 19.252 4.40298H16.407V5.78098C16.407 6.16198 16.113 6.46998 15.751 6.46998C15.388 6.46998 15.095 6.16198 15.095 5.78098V4.40298H11.157V5.78098C11.157 6.16198 10.863 6.46998 10.502 6.46998C10.139 6.46998 9.845 6.16198 9.845 5.78098V4.40298H5.907V5.78098C5.907 6.16198 5.613 6.46998 5.251 6.46998C4.888 6.46998 4.594 6.16198 4.594 5.78098V4.40298H1.75C1.50263 4.40953 1.30696 4.61458 1.312 4.86198V21.164C1.30696 21.4114 1.50263 21.6164 1.75 21.623H19.251C19.3698 21.6201 19.4826 21.5701 19.5646 21.484Z"/>
-                <path fill-rule="evenodd" clip-rule="evenodd"
-                      d="M4.59399 9.2251H7.21899V11.2911H4.59399V9.2251ZM4.59399 12.6681H7.21899V14.7351H4.59399V12.6681ZM7.21899 16.1121H4.59399V18.1781H7.21899V16.1121ZM9.18799 16.1121H11.813V18.1781H9.18799V16.1121ZM11.813 12.6681H9.18799V14.7351H11.813V12.6681ZM9.18799 9.2251H11.813V11.2911H9.18799V9.2251ZM16.406 16.1121H13.781V18.1781H16.406V16.1121ZM13.781 12.6681H16.406V14.7351H13.781V12.6681ZM16.406 9.2251H13.781V11.2911H16.406V9.2251Z"/>
+    <form method="get" action="#" class="search-form modal modal-show">
+      <p>
+        <label>
+          Дата заезда: <input type="text" placeholder="24 апреля 2017" class="long-input date-in-input">
+        </label>
+        <button type="button" class="button button-icon button-calendar" aria-label="календарь">
+          <svg width="21" height="23" viewBox="0 0 21 23" fill="black" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M16.406 3.02498H19.251C20.217 3.02498 21 3.84698 21 4.86198V21.164C21 22.179 20.217 23 19.251 23H1.75C0.784 23 0 22.179 0 21.164V4.86198C0 3.84698 0.784 3.02498 1.75 3.02498H4.593V1.64798C4.593 1.26698 4.887 0.958984 5.25 0.958984C5.612 0.958984 5.906 1.26698 5.906 1.64798V3.02498H9.844V1.64798C9.844 1.26698 10.138 0.958984 10.501 0.958984C10.862 0.958984 11.156 1.26698 11.156 1.64798V3.02498H15.094V1.64798C15.094 1.26698 15.387 0.958984 15.75 0.958984C16.112 0.958984 16.406 1.26698 16.406 1.64798V3.02498ZM19.5646 21.484C19.6466 21.3979 19.691 21.2828 19.688 21.164H19.689V4.86198C19.689 4.60898 19.493 4.40298 19.252 4.40298H16.407V5.78098C16.407 6.16198 16.113 6.46998 15.751 6.46998C15.388 6.46998 15.095 6.16198 15.095 5.78098V4.40298H11.157V5.78098C11.157 6.16198 10.863 6.46998 10.502 6.46998C10.139 6.46998 9.845 6.16198 9.845 5.78098V4.40298H5.907V5.78098C5.907 6.16198 5.613 6.46998 5.251 6.46998C4.888 6.46998 4.594 6.16198 4.594 5.78098V4.40298H1.75C1.50263 4.40953 1.30696 4.61458 1.312 4.86198V21.164C1.30696 21.4114 1.50263 21.6164 1.75 21.623H19.251C19.3698 21.6201 19.4826 21.5701 19.5646 21.484Z"/>
+            <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M4.59399 9.2251H7.21899V11.2911H4.59399V9.2251ZM4.59399 12.6681H7.21899V14.7351H4.59399V12.6681ZM7.21899 16.1121H4.59399V18.1781H7.21899V16.1121ZM9.18799 16.1121H11.813V18.1781H9.18799V16.1121ZM11.813 12.6681H9.18799V14.7351H11.813V12.6681ZM9.18799 9.2251H11.813V11.2911H9.18799V9.2251ZM16.406 16.1121H13.781V18.1781H16.406V16.1121ZM13.781 12.6681H16.406V14.7351H13.781V12.6681ZM16.406 9.2251H13.781V11.2911H16.406V9.2251Z"/>
+          </svg>
+        </button>
+      </p>
+      <p>
+        <label>
+          Дата выезда: <input type="text" placeholder="4 июля 2017" class="long-input date-out-input">
+        </label>
+        <button type="button" class="button button-icon button-calendar" aria-label="календарь">
+          <svg width="21" height="23" viewBox="0 0 21 23" fill="black" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M16.406 3.02498H19.251C20.217 3.02498 21 3.84698 21 4.86198V21.164C21 22.179 20.217 23 19.251 23H1.75C0.784 23 0 22.179 0 21.164V4.86198C0 3.84698 0.784 3.02498 1.75 3.02498H4.593V1.64798C4.593 1.26698 4.887 0.958984 5.25 0.958984C5.612 0.958984 5.906 1.26698 5.906 1.64798V3.02498H9.844V1.64798C9.844 1.26698 10.138 0.958984 10.501 0.958984C10.862 0.958984 11.156 1.26698 11.156 1.64798V3.02498H15.094V1.64798C15.094 1.26698 15.387 0.958984 15.75 0.958984C16.112 0.958984 16.406 1.26698 16.406 1.64798V3.02498ZM19.5646 21.484C19.6466 21.3979 19.691 21.2828 19.688 21.164H19.689V4.86198C19.689 4.60898 19.493 4.40298 19.252 4.40298H16.407V5.78098C16.407 6.16198 16.113 6.46998 15.751 6.46998C15.388 6.46998 15.095 6.16198 15.095 5.78098V4.40298H11.157V5.78098C11.157 6.16198 10.863 6.46998 10.502 6.46998C10.139 6.46998 9.845 6.16198 9.845 5.78098V4.40298H5.907V5.78098C5.907 6.16198 5.613 6.46998 5.251 6.46998C4.888 6.46998 4.594 6.16198 4.594 5.78098V4.40298H1.75C1.50263 4.40953 1.30696 4.61458 1.312 4.86198V21.164C1.30696 21.4114 1.50263 21.6164 1.75 21.623H19.251C19.3698 21.6201 19.4826 21.5701 19.5646 21.484Z"/>
+            <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M4.59399 9.2251H7.21899V11.2911H4.59399V9.2251ZM4.59399 12.6681H7.21899V14.7351H4.59399V12.6681ZM7.21899 16.1121H4.59399V18.1781H7.21899V16.1121ZM9.18799 16.1121H11.813V18.1781H9.18799V16.1121ZM11.813 12.6681H9.18799V14.7351H11.813V12.6681ZM9.18799 9.2251H11.813V11.2911H9.18799V9.2251ZM16.406 16.1121H13.781V18.1781H16.406V16.1121ZM13.781 12.6681H16.406V14.7351H13.781V12.6681ZM16.406 9.2251H13.781V11.2911H16.406V9.2251Z"/>
+          </svg>
+        </button>
+      </p>
+      <div class="two-labels-div">
+        <div class="adult-div-count">
+          <label for="adult-count-input">Взрослые:</label>
+          <div class="div-with-buttons-and-input">
+            <button type="button" class="button sign-button" aria-label="уменьшить">
+              <svg width="12" height="3" viewBox="0 0 12 3" fill="black" xmlns="http://www.w3.org/2000/svg">
+                <rect width="12" height="3"/>
               </svg>
             </button>
-          </p>
-          <p>
-            <label>
-              Дата выезда: <input type="text" placeholder="4 июля 2017" class="long-input date-out-input">
-            </label>
-            <button type="button" class="button button-icon button-calendar" aria-label="календарь">
-              <svg width="21" height="23" viewBox="0 0 21 23" fill="black" xmlns="http://www.w3.org/2000/svg">
+            <input type="text" placeholder="2" class="short-input" id="adult-count-input">
+            <button type="button" class="button sign-button" aria-label="увеличить">
+              <svg width="11" height="11" viewBox="0 0 11 11" fill="black" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
-                      d="M16.406 3.02498H19.251C20.217 3.02498 21 3.84698 21 4.86198V21.164C21 22.179 20.217 23 19.251 23H1.75C0.784 23 0 22.179 0 21.164V4.86198C0 3.84698 0.784 3.02498 1.75 3.02498H4.593V1.64798C4.593 1.26698 4.887 0.958984 5.25 0.958984C5.612 0.958984 5.906 1.26698 5.906 1.64798V3.02498H9.844V1.64798C9.844 1.26698 10.138 0.958984 10.501 0.958984C10.862 0.958984 11.156 1.26698 11.156 1.64798V3.02498H15.094V1.64798C15.094 1.26698 15.387 0.958984 15.75 0.958984C16.112 0.958984 16.406 1.26698 16.406 1.64798V3.02498ZM19.5646 21.484C19.6466 21.3979 19.691 21.2828 19.688 21.164H19.689V4.86198C19.689 4.60898 19.493 4.40298 19.252 4.40298H16.407V5.78098C16.407 6.16198 16.113 6.46998 15.751 6.46998C15.388 6.46998 15.095 6.16198 15.095 5.78098V4.40298H11.157V5.78098C11.157 6.16198 10.863 6.46998 10.502 6.46998C10.139 6.46998 9.845 6.16198 9.845 5.78098V4.40298H5.907V5.78098C5.907 6.16198 5.613 6.46998 5.251 6.46998C4.888 6.46998 4.594 6.16198 4.594 5.78098V4.40298H1.75C1.50263 4.40953 1.30696 4.61458 1.312 4.86198V21.164C1.30696 21.4114 1.50263 21.6164 1.75 21.623H19.251C19.3698 21.6201 19.4826 21.5701 19.5646 21.484Z"/>
-                <path fill-rule="evenodd" clip-rule="evenodd"
-                      d="M4.59399 9.2251H7.21899V11.2911H4.59399V9.2251ZM4.59399 12.6681H7.21899V14.7351H4.59399V12.6681ZM7.21899 16.1121H4.59399V18.1781H7.21899V16.1121ZM9.18799 16.1121H11.813V18.1781H9.18799V16.1121ZM11.813 12.6681H9.18799V14.7351H11.813V12.6681ZM9.18799 9.2251H11.813V11.2911H9.18799V9.2251ZM16.406 16.1121H13.781V18.1781H16.406V16.1121ZM13.781 12.6681H16.406V14.7351H13.781V12.6681ZM16.406 9.2251H13.781V11.2911H16.406V9.2251Z"/>
+                      d="M4.23086 6.76932V11H6.76932V6.76932H11V4.23086H6.76932V0H4.23085V4.23086H0V6.76932H4.23086Z"/>
               </svg>
             </button>
-          </p>
-          <div class="two-labels-div">
-            <div class="adult-div-count">
-              <label for="adult-count-input">Взрослые:</label>
-              <div class="div-with-buttons-and-input">
-                <button type="button" class="button sign-button" aria-label="уменьшить">
-                  <svg width="12" height="3" viewBox="0 0 12 3" fill="black" xmlns="http://www.w3.org/2000/svg">
-                    <rect width="12" height="3"/>
-                  </svg>
-                </button>
-                <input type="text" placeholder="2" class="short-input" id="adult-count-input">
-                <button type="button" class="button sign-button" aria-label="увеличить">
-                  <svg width="11" height="11" viewBox="0 0 11 11" fill="black" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" clip-rule="evenodd"
-                          d="M4.23086 6.76932V11H6.76932V6.76932H11V4.23086H6.76932V0H4.23085V4.23086H0V6.76932H4.23086Z"/>
-                  </svg>
-                </button>
-              </div>
-            </div>
-            <div class="children-div-count">
-              <label for="children-count-input">Дети:</label>
-              <div class="div-with-buttons-and-input">
-                <button type="button" class="button sign-button" aria-label="уменьшить">
-                  <svg width="12" height="3" viewBox="0 0 12 3" fill="black" xmlns="http://www.w3.org/2000/svg">
-                    <rect width="12" height="3"/>
-                  </svg>
-                </button>
-                <input type="text" placeholder="0" class="short-input" id="children-count-input">
-                <button type="button" class="button sign-button" aria-label="увеличить">
-                  <svg width="11" height="11" viewBox="0 0 11 11" fill="black" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" clip-rule="evenodd"
-                          d="M4.23086 6.76932V11H6.76932V6.76932H11V4.23086H6.76932V0H4.23085V4.23086H0V6.76932H4.23086Z"/>
-                  </svg>
-                </button>
-              </div>
-            </div>
           </div>
-          <button type="submit" title="Найти" class="button search-button">Найти</button>
-        </form>
-      </section>
-    </div>
+        </div>
+        <div class="children-div-count">
+          <label for="children-count-input">Дети:</label>
+          <div class="div-with-buttons-and-input">
+            <button type="button" class="button sign-button" aria-label="уменьшить">
+              <svg width="12" height="3" viewBox="0 0 12 3" fill="black" xmlns="http://www.w3.org/2000/svg">
+                <rect width="12" height="3"/>
+              </svg>
+            </button>
+            <input type="text" placeholder="0" class="short-input" id="children-count-input">
+            <button type="button" class="button sign-button" aria-label="увеличить">
+              <svg width="11" height="11" viewBox="0 0 11 11" fill="black" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                      d="M4.23086 6.76932V11H6.76932V6.76932H11V4.23086H6.76932V0H4.23085V4.23086H0V6.76932H4.23086Z"/>
+              </svg>
+            </button>
+          </div>
+        </div>
+      </div>
+      <button type="submit" title="Найти" class="button search-button">Найти</button>
+    </form>
     <section class="map-section">
       <h2 class="visually-hidden">Карта</h2>
       <iframe
@@ -223,6 +218,6 @@
     </section>
   </footer>
 </div>
-<script src="js/script.js"></script>
+<script src="js/script.min.js"></script>
 </body>
 </html>
