--- a/index.html
+++ b/index.html
@@ -18,9 +18,6 @@
         <li class="main-nav__left-link">
           <a href="#" aria-label="Ссылка на страницу Фото и Видео">Фото и видео</a>
         </li>
-        <li>
-          <img src="img/logo-main.png" alt="Логотип" width="138" height="70" class="logo">
-        </li>
         <li class="main-nav__right-link">
           <a href="#" aria-label="Ссылка на страницу Карты сайта">Карта штата</a>
         </li>
@@ -28,6 +25,7 @@
           <a href="catalog.html" aria-label="Ссылка на страницу Гостиницы">Гостиницы</a>
         </li>
       </ul>
+      <img src="img/logo-main.png" alt="Логотип" width="138" height="70" class="logo">
     </nav>
   </header>
   <main class="main">
@@ -36,7 +34,7 @@
       <div class="sedona-intro__slide">
         <img src="img/welcome.png" alt="Добро пожаловать в Седону" width="458" height="352">
       </div>
-      <div class="senoda-intro__text">
+      <div class="sedona-intro__text">
         <h2>Седона &mdash; небольшой городок в Аризоне, заслуживающий большего!</h2>
         <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
       </div>
